@@ -1,4 +1,6 @@
 DIST dep_selector-0.0.8.gem 39424 SHA256 d01bc22a0e49873d283d6cae1e06ab1cbc532b3867703d3e8d9fdec9e4b4bbba SHA512 b03b0338f8ed71558636176999dd9c4d456e8bbfa85c0b8358c89063777d99dc250cd3411a005b78c2c31276c48111ecf9fcc14aec9a5b557af6d3a6a982dfc4 WHIRLPOOL 660ce772e74279b15f8f67d6efbf8cfad63eae14e8f73b17b7794668ee4f2dac8e5a7bc742b5fd19f66e9f5a3ac1ed497f4fd1c277413782e6381527dc1af1e4
+DIST dep_selector-0.1.1.tar.gz 81472 SHA256 c49ac900a5011628be9031e57fded6948533a36b15569b0e52d4ed9c8b19579b SHA512 08004bb54678983739a1861285d66915f7c7c3921371f5154f4e3ccd31748d1fb05856b6cb0f545975350e0ebdf881ab01b955036bfa19b9738a89cebb552720 WHIRLPOOL 9dee298246e05a5efefd576f1f37b618a7c31048b6ebb863f27694be1649b767335e6622e95a198e9f9d750719fd98f801435bca139ba968a57f0e0e09fe2dc2
 EBUILD dep_selector-0.0.8-r1.ebuild 899 SHA256 26cb22a658f101f11b11cd2a8ea543c4b0074cfbead5318214255e4a4f8d07e5 SHA512 ddad8598b590df36c3e7f10fea6c1783fbcc012a7a42ce53009f3ddb07a575afff9a8a5a236512c12a915b82cd204206e99274f6267cdaeb99b9a55eb16ef92d WHIRLPOOL 3210b81884433b3c20c7065d3842bc33e687f49233fe3fd4645a0ec3d31ae990767d5b03c611d63605af99b02f5f38c3acf63de5485cac4b776904157e6efb54
-MISC ChangeLog 998 SHA256 602ed998f7877e8b33fbb0b0706a95bb6acb9df2509e8842b980cb5893a18053 SHA512 16a58233e58d8af0a3e252b3a8cf134f2ea094ca1a753c06fbd54452c43c978219fa0008d9af798689436a6d142159f06dc5708e3061dce49f5cf2d388ba167a WHIRLPOOL df4714992ac693a522e598808476d1ee24b112f7dfc1e48195a16c5117ae14dccac4baddb5d4f79efe3c19fd4f2fcb9ed6f60cba56674129308e1f321ab627d5
+EBUILD dep_selector-0.1.1.ebuild 1036 SHA256 2b2cba8cc555b14edb2faf1688d7eba64cc995c63413964007a4f895147515aa SHA512 f4809bc60c08bfdc7462358083514b5623a361356f53c6596c1650c5303bef607dce4d8f44184613c4e71bd74b13b5f00c37fbc589516fc9513e71cfbe128437 WHIRLPOOL bdf8020f137ec6fb9467fc6489880bc0f270a57ddfc9b2078eda2877217716c963e84f016c103319e1c0e47a907742897625ec8dfc88c7f801b001c0892ff46e
+MISC ChangeLog 1126 SHA256 a51537ad80354e366fa63a48253fc296af4e899105a60673c028599264af47ec SHA512 340d1a031e61f39f443ffb8c6612e4c4fd7d8c3033fc779342f38fe52bc8ac32acf5629dcd6cd64a67f2473c4435a4aa5d0a8a832e17dddf727888a026a07b7c WHIRLPOOL 4f96b169b553727e10356fa9ad6bce9b9f37e69b06e5bbb91f07964369ed3373e0e6a18b0bebb7bc202a3e0de526d3de72f23b5f9334094f67849d4a6c7ce93b
 MISC metadata.xml 157 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c SHA512 0cec73b966de88015ea4c7212723d848d367608aa93658bb945f298a8000c4ba8aba73c9eb8481859fb5bbed45e80dae32c628caf81e027a4ad8eafa7e632851 WHIRLPOOL 4da25c81e21173ad8b7b5f35b056264869d9a16741062aa4422c5ea1aa9e73da8eb700b0d54de84c169d702fbb3f41ed157c9dc7c9daac110849ae84715c051b
