@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/dep_selector
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/dep_selector/ChangeLog,v 1.6 2013/11/17 20:45:09 mrueg Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/dep_selector/ChangeLog,v 1.7 2014/03/26 20:15:19 mrueg Exp $
+
+*dep_selector-0.1.1 (26 Mar 2014)
+
+  26 Mar 2014; Manuel Rüger <mrueg@gentoo.org> +dep_selector-0.1.1.ebuild:
+  Version bump.
 
   17 Nov 2013; Manuel Rüger <mrueg@gentoo.org> -dep_selector-0.0.8.ebuild:
   Cleanup old.
